--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,10 @@ body {
   align-items: center;
 }
 
+html,body {
+  height: 100%; 
+}
+
 /* タイトル */
 h1 {
   text-align: center;
@@ -17,16 +21,25 @@ h1 {
   text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
 }
 
+/* 文字 */
+p {
+  font-size: 18px;
+  color: #0044aa;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+}
+
 /* パズルテーブル */
 table {
   border-collapse: collapse;
   margin: 20px auto;
+  line-height: 0;
 }
 
 /* タイル */
 .tile {
   width: 70px;
   height: 70px;
+  padding: 0;
   cursor: pointer;
   border-radius: 10px;
   border: 2px solid #007bff;
@@ -61,17 +74,18 @@ button {
   padding: 10px 20px;
   border: none;
   border-radius: 10px;
-  background: rgba(255,255,255,0.3);
-  backdrop-filter: blur(5px);
+  background:linear-gradient(to bottom, rgba(255,255,255,0.8), rgba(255,255,255,0.4));
+  backdrop-filter: blur(6px);
   box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-  color: #fff;
-  font-size: 16px;
+  color: #0044aa;
+  font-size: 18px;
+  font-weight: bold;
   cursor: pointer;
   transition: all 0.2s ease;
 }
 
 button:hover {
-  background: rgba(255,255,255,0.5);
+  background: linear-gradient(to bottom, rgba(255,255,255,1), rgba(255,255,255,0.6));
   transform: translateY(-2px);
 }
 
