--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   background: linear-gradient(to bottom, #66a6ff, #89f7fe); /* XP風青グラデーション */
   margin: 0;
   padding: 0;
-  display: flex;
+  text-align: center; 
   flex-direction: column;
   align-items: center;
 } 
@@ -46,6 +46,7 @@ p {
 /* パズルテーブル */
 table {
   width: 100%;
+  height: 100%;
   aspect-ratio: 1 / 1;
   border-collapse: collapse;
   border-spacing: 0;
